--- a/src/style.css
+++ b/src/style.css
@@ -96,5 +96,7 @@ body {
   parent:text-text-parent-primary
   /* Затем добавляем тёмную тему для поддержки dark mode */
   parent:dark:bg-background-parent-primary-dark
-  parent:dark:text-text-parent-primary-dark;
+  parent:dark:text-text-parent-primary-dark
+  /* Анимация */
+  transition-colors duration-300 ease-in-out;
 }
