--- a/src/styles/variants.css
+++ b/src/styles/variants.css
@@ -1,3 +1,3 @@
 /* Создаём кастомные варианты через data-атрибуты */
-@variant kid ([data-theme="kid"] &);
+@variant child ([data-theme="child"] &);
 @variant parent ([data-theme="parent"] &);
