--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -7,5 +7,7 @@
 @import "./theme.css";
 
 @import "./elements.css";
+@import "./reusable.css";
 
 @import "./components/header.css";
+@import "./components/hero.css";
