--- a/src/styles/reusable.css
+++ b/src/styles/reusable.css
@@ -5,13 +5,19 @@
 @layer components {
   .bg-palette {
     @apply bg-family-bg-light dark:bg-family-bg-dark
-           child:bg-child-bg-light dark:child:bg-child-bg-dark
-           parent:bg-parent-bg-light dark:parent:bg-parent-bg-dark;
+           child:bg-child-bg-light child:dark:bg-child-bg-dark
+           parent:bg-parent-bg-light parent:dark:bg-parent-bg-dark;
   }
 
   .bg-palette-90 {
     @apply bg-family-bg-light/90 dark:bg-family-bg-dark/90
-           child:bg-child-bg-light/90 dark:child:bg-child-bg-dark/90
-           parent:bg-parent-bg-light/90 dark:parent:bg-parent-bg-dark/90;
+           child:bg-child-bg-light/90 child:dark:bg-child-bg-dark/90
+           parent:bg-parent-bg-light/90 parent:dark:bg-parent-bg-dark/90;
+  }
+
+  .text-palette {
+    @apply text-family-text-light dark:text-family-text-dark
+      child:text-child-text-light child:dark:text-child-text-dark
+      parent:text-parent-text-light parent:dark:text-parent-text-dark;
   }
 }
