--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -6,8 +6,8 @@
 
 @import "./theme.css";
 
+@import "./reusable.css"; /* Утилиты */
 @import "./elements.css";
-@import "./reusable.css";
 
 @import "./components/header.css";
 @import "./components/hero.css";
